# mge

./: .gitignore  .gitmessage  .ignore  .releaserc.json  AGENTS.md  Cargo.toml  Makefile  README.md  game.toml  package-lock.json  package.json  run_all_lua_tests.sh  run_lua_tests.sh  rust-toolchain.toml
engine/core/: .gitignore  Cargo.toml
engine/core/examples/: viewport_camera_demo.rs  viewport_demo.rs
engine/core/src/: config.rs  faction.rs  lib.rs  loot.rs  main.rs  map.rs  material.rs  tech_tree.rs  worldgen.rs
engine/core/tests/: abi_version.rs  ai_event_intent.rs  ai_job_assignment.rs  body.rs  body_equipment_integration.rs  body_part_damage.rs  body_schema.rs  component_change_events.rs  component_migration.rs  component_registry.rs  component_registry_hot_reload.rs  component_registry_hotreload.rs  component_registry_migration.rs  component_registry_registration.rs  components.rs  death_removal.rs  dynamic_event_bus.rs  economic_system.rs  economy.rs  effect_chaining.rs  entity.rs  entity_multiregion.rs  entity_query.rs  entity_region_kind.rs  equipment.rs  equipment_constraints.rs  equipment_system.rs  event_bus_core.rs  event_bus_filter_map.rs  event_bus_generics.rs  event_bus_introspection.rs  event_bus_once.rs  event_bus_persistence.rs  event_bus_registry_hotreload.rs  event_bus_serde.rs  event_bus_subscriptions.rs  event_bus_weak_subscriptions.rs  event_handlers.rs  event_logger.rs  event_logger_integration.rs  (+124 more)
engine_lua/: Cargo.toml
engine_lua/src/: engine.rs  event_bus.rs  helpers.rs  input.rs  lib.rs  mod.rs  schemas.rs  system_bridge.rs
engine_lua/src/lua_api/: body.rs  callback_registry.rs  camera.rs  component.rs  death_decay.rs  dungeon.rs  economic.rs  entity.rs  equipment.rs  event_bus.rs  faction.rs  fov.rs  input.rs  inventory.rs  job_ai.rs  job_board.rs  job_cancel.rs  job_events.rs  job_mutation.rs  job_query.rs  job_system.rs  loot.rs  map.rs  material.rs  mod.rs  mode.rs  (+10 more)
engine_lua/tests/: input.rs  script_loading.rs
engine_macros/: Cargo.toml  README.md
engine_macros/src/: lib.rs  migration.rs  parse.rs  schema.rs  serde_impl.rs
engine_macros/tests/: component_macro.rs
engine_py/: Cargo.toml  README.md  pyproject.toml
engine_py/src/: api.rs  event_bus.rs  job_bridge.rs  job_logger.rs  lib.rs  plugin_init.rs  system_bridge.rs  worldgen_bridge.rs
engine_py/tests/: conftest.py  dynamic_jobs.py  test_ai_job_assignment.py  test_ai_job_assignment_query_modify.py  test_basic.py  test_body.py  test_body_part_damage.py  test_camera_api.py  test_dungeon_gen.py  test_dynamic_jobs.py  test_dynamic_system.py  test_economic.py  test_entities_in_cell.py  test_entity_manage.py  test_entity_query.py  test_equipment.py  test_event_bus.py  test_faction_reputation.py  test_fog.py  test_fov.py  test_input.py  test_introspection.py  test_inventory.py  test_job.py  test_job_board.py  test_job_cancellation.py  test_job_children_and_dependencies.py  test_job_event_log_save_load.py  test_job_events.py  test_job_mutation.py  test_job_progress.py  test_job_query.py  test_job_resource_reservation.py  test_job_type_metadata.py  test_loot.py  test_map_api.py  test_map_metadata.py  test_map_postprocessor.py  test_material.py  test_mode.py  (+14 more)
engine_wasm/: Cargo.toml
engine_wasm/src/: engine.rs  lib.rs
engine_wasm/tests/: fov.rs  mod.rs  test_entity_api.wasm  wasm_body_api.rs  wasm_body_part_damage.rs  wasm_camera_api.rs  wasm_component_api.rs  wasm_component_introspection_api.rs  wasm_death_decay_api.rs  wasm_dungeon_api.rs  wasm_economic_api.rs  wasm_economic_reservation.rs  wasm_engine.rs  wasm_entity_api.rs  wasm_event_bus_ecs.rs  wasm_export_discovery.rs  wasm_faction_api.rs  wasm_fog_api.rs  wasm_input_api.rs  wasm_inventory_api.rs  wasm_job_ai.rs  wasm_job_board.rs  wasm_job_cancel.rs  wasm_job_events.rs  wasm_job_mutation.rs  wasm_job_query.rs  wasm_job_system.rs  wasm_loot_api.rs  wasm_map_api.rs  wasm_material_api.rs  wasm_mode_api.rs  wasm_region_api.rs  wasm_save_load_api.rs  wasm_skill_stat_api.rs  wasm_time_of_day_api.rs  wasm_turn_api.rs  wasm_ui_api.rs  wasm_world_userdata_api.rs  wasm_worldgen_api.rs  wasm_worldgen_registration.rs
engine_wasm/wasm_tests/: test_body_api.rs  test_body_part_damage.rs  test_camera_api.rs  test_component_api.rs  test_component_introspection_api.rs  test_death_decay_api.rs  test_economic_api.rs  test_economic_reservation.rs  test_entity_api.rs  test_event_bus_ecs.rs  test_export_discovery.rs  test_faction_api.rs  test_fog_api.rs  test_fov_api.rs  test_input_api.rs  test_inventory_api.rs  test_job_ai.rs  test_job_board.rs  test_job_cancel.rs  test_job_events.rs  test_job_mutation.rs  test_job_query.rs  test_job_system.rs  test_loot_api.rs  test_map_api.rs  test_material_api.rs  test_mode_api.rs  test_region_api.rs  test_save_load_api.rs  test_skill_stat_api.rs  test_time_of_day_api.rs  test_turn_api.rs  test_ui.rs  test_world_userdata_api.rs  test_worldgen_api.rs  test_worldgen_registration.rs
plugins/rust_test_plugin/: Cargo.toml  plugin.json
(+511 files in other folders)
