[package]
name = "engine_lua"
version = "0.1.0"
edition = "2024"

[dependencies]
engine_core = { path = "../engine/core" }
mlua = { version = "0.10.5", features = ["luajit", "serialize"] }
serde_json = "1.0.140"
gag = "1.0.0"
regex = "1.11.1"
lazy_static = "1.4"
once_cell = "1.21.3"

[dev-dependencies]
tempfile = "3.20.0"

[[bin]]
name = "mge_lua_test_runner"
path = "src/bin/mge_lua_test_runner.rs"

[[bin]]
name = "mge_cli"
path = "src/bin/mge_cli.rs"
