[package]
name = "engine_wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
engine_core = { path = "../engine/core" }
wasmtime = { version = "19.0", features = ["async"] }
wasmtime-wasi = "19.0"
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
wat = "1.0"
tempfile = "3.10"
