[package]
name = "engine_core"
version = "0.1.0"
edition = "2024"

[dependencies]
hecs = "0.10"
mlua = { version = "0.9", features = ["luajit", "serialize"] }
serde = { version = "1.0", features = ["derive"] }
schemars = { version = "0.8", features = ["derive"] }
schemars_derive = "0.8"
serde_json = "1.0.140"
bson = "2.14.0"
semver = { version = "1.0.26", features = ["serde"] }
thiserror = "2.0.12"
engine_macros = { path = "../../engine_macros" }
anyhow = "1.0.98"
libloading = "0.8"
jsonschema = "0.16"
once_cell = "1.21.3"
indexmap = "2"
topo_sort = "0.4.0"
serde_yaml = "0.9.34"
toml = "0.8.22"
rand = "0.9.1"

[dev-dependencies]
rstest = "0.18"
mockall = "0.12"
tempfile = "3.20.0"
serial_test = "3"

[[bin]]
name = "mge-cli"
path = "src/bin/mge_cli.rs"
