[package]
name = "engine_core"
version = "0.1.0"
edition = "2024"

[dependencies]
mlua = { version = "0.10.5", features = ["luajit", "serialize"] }
serde = { version = "1.0", features = ["derive"] }
schemars = { version = "0.9", features = ["derive"] }
serde_json = "1.0.140"
bson = "2.15.0"
semver = { version = "1.0.26", features = ["serde"] }
thiserror = "2.0.12"
engine_macros = { path = "../../engine_macros" }
anyhow = "1.0.98"
libloading = "0.8"
jsonschema = "0.30"
once_cell = "1.21.3"
indexmap = "2"
topo_sort = "0.4.0"
serde_yaml = "0.9.34"
toml = "0.8.23"
rand = "0.9.1"
gag = "1.0.0"
regex = "1.11.1"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3.20.0"
serial_test = "3"

[[bin]]
name = "mge-cli"
path = "src/bin/mge_cli.rs"
